Fixing fixed background on ios

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,3 +95,9 @@ body{
         left: 100%;
     }
 }
+
+@supports (-webkit-touch-callout: none) {
+    .bg-fixes{
+        background-attachment: scroll;
+    }
+}
